# 2024-2-gpt

./: .gitignore  README.md  configs.json  pyproject.toml  results.ipynb  run.sh  utils.py
configs/: configs_final.json  configs_hyperparams.json  configs_model.json
conversations/dataset/: qa.csv  test_with_id.csv
dataset/memories/: memories.csv
dataset/memories_2/: memories.csv
dataset/test/: qa.csv  qa1.csv  qa2.csv  qa3.csv  qa_09_03_2025.csv
gpt_2024_2/: cli.py  evaluate_chatbot_answers.py  evaluation.py  experiment.py  qa_test.py  utils.py
gpt_2024_2/context/: builder.py
gpt_2024_2/eval/: classical_metrics.py  multiple_choice_eval.py  perplexity.py  prompts.py  ragas_semantic.py
gpt_2024_2/model/: brain_bot.py  builder.py  gen_model.py  prompts.py  retriever.py  summarizer.py
results/: llama__gte__3__default.csv  qa__llama__gte.csv  qa__llama__gte_bart.csv  qa__llama__gte_baseline.csv  qa__llama__gte_pegasus.csv  qa__llama__gte_rake.csv  qa__llama__gte_yake.csv  qa__llama__jina.csv
